# los

./: .gitignore  AUTHORS  CMakeLists.txt  README  README.md  all.h  compile_los.sh  compile_oom.sh  config.h.in  los.kdev4  pch.txt
al/: CMakeLists.txt  al.cpp  al.h  dsp.cpp  sig.cpp  sig.h  xml.cpp
awl/: CMakeLists.txt  awl.cpp  awl.h  posedit.cpp  posedit.h  sigedit.cpp  sigedit.h
demos/: CMakeLists.txt
los/: AbstractMidiEditor.cpp  AbstractMidiEditor.h  AddRemoveTrackCommand.cpp  AddRemoveTrackCommand.h  CMakeLists.txt  FadeCurve.cpp  FadeCurve.h  TrackManager.cpp  TrackManager.h  app.cpp  app.h  audio.cpp  audio.h  audioconvert.cpp  audioconvert.h  audioprefetch.cpp  audioprefetch.h  audiotrack.cpp  ccinfo.cpp  ccinfo.h  cobject.cpp  cobject.h  conf.cpp  conf.h  ctrl.cpp  ctrl.h  defines.h  event.cpp  event.h  eventbase.h  eventlist.cpp  exportmidi.cpp  gconfig.cpp  gconfig.h  globaldefs.hpp  globals.cpp  globals.h  gui.h  help.cpp  helper.cpp  (+77 more)
los/Arranger/: Arranger.cpp  Arranger.h  ArrangerCanvas.cpp  ArrangerCanvas.h  CMakeLists.txt  CanvasNavigator.cpp  CanvasNavigator.h  HeaderList.cpp  HeaderList.h
los/Composer/: CMakeLists.txt  CanvasNavigator.cpp  Composer.cpp  Composer.h  ComposerCanvas.cpp  ComposerCanvas.h  HeaderList.cpp  HeaderList.h
los/cliplist/: CMakeLists.txt  cliplist.cpp  cliplist.h
los/ctrl/: CMakeLists.txt  ctrlcanvas.cpp  ctrlcanvas.h  ctrledit.cpp  ctrledit.h  ctrlpanel.cpp  ctrlpanel.h
los/driver/: CMakeLists.txt  alsamidi.cpp  alsamidi.h  alsatimer.cpp  alsatimer.h  audiodev.h  dummyaudio.cpp  jack.cpp  jackaudio.h  jackmidi.cpp  jackmidi.h  rtctimer.cpp  rtctimer.h
los/instruments/: CMakeLists.txt  editinstrument.cpp  editinstrument.h  editinstrumentbase.ui  minstrument.cpp  minstrument.h
los/liste/: CMakeLists.txt  editctrlbase.ui  editevent.cpp  editevent.h  listedit.cpp  listedit.h
los/marker/: CMakeLists.txt  marker.cpp  marker.h  markerview.cpp  markerview.h
los/master/: CMakeLists.txt  lmaster.cpp  lmaster.h  master.cpp  master.h  masteredit.cpp  masteredit.h  tscale.cpp  tscale.h
los/midiedit/: CMakeLists.txt  EventCanvas.cpp  EventCanvas.h  Performer.cpp  Performer.h  PerformerCanvas.cpp  PerformerCanvas.h  Piano.cpp  Piano.h  Pianoroll.cpp  Pianoroll.h  PianorollCanvas.cpp  PianorollCanvas.h  quantconfig.cpp  quantconfig.h
los/midiplugins/: CMakeLists.txt  midifilter.ui  midifilterimpl.cpp  midifilterimpl.h  midiitransform.cpp  midiitransform.h  mitplugin.cpp  mitplugin.h  mittranspose.cpp  mittranspose.h  mrconfig.cpp  mrconfig.h  mrconfigbase.ui  random.cpp  random.h
los/theme/: CMakeLists.txt  CarlaStyle.cpp  CarlaStyle.hpp
los/traverso_shared/: AddRemoveCtrlValues.cpp  AddRemoveCtrlValues.h  CommandGroup.cpp  CommandGroup.h  OOMCommand.cpp  OOMCommand.h  TConfig.cpp
los/widgets/: AutomationMenu.cpp  AutomationMenu.h  CMakeLists.txt  CreateTrackDialog.cpp  CreateTrackDialog.h  DoubleSlider.cpp  DoubleSlider.h  StretchDialog.cpp  StretchDialog.h  TempoCanvas.cpp  TempoCanvas.h  TempoHeader.cpp  TempoHeader.h  TimeHeader.cpp  TimeHeader.h  TrackInstrumentMenu.cpp  TrackInstrumentMenu.h  aboutbox_impl.cpp  action.h  apconfig.cpp  apconfig.h  apconfigbase.ui  bigtime.cpp  bigtime.h  canvas.cpp  canvas.h  ccdelegate.cpp  ccdelegate.h  ccedit.cpp  ccedit.h  checkbox.cpp  checkbox.h  citem.cpp  citem.h  cliplisteditorbase.ui  comboQuant.cpp  comboQuant.h  combobox.cpp  combobox.h  comment.cpp  (+154 more)
los/widgets/ClipList/: AudioClipList.cpp  AudioClipList.h  AudioClipListBase.ui  AudioPlayer.cpp  AudioPlayer.h  BookmarkList.cpp  BookmarkList.h  MidiClipList.cpp  MidiClipList.h  MidiClipListBase.ui
los/widgets/conductor/: Conductor.cpp  Conductor.h  ConductorBase.ui  pctable.cpp
los/widgets/toolbars/: edittools.cpp  epictools.cpp  feedbacktools.cpp  feedbacktools.h  looptools.cpp  misctools.cpp  tools.cpp  tools.h  trackviewtools.cpp  trackviewtools.h  transporttools.cpp  transporttools.h
man/: CMakeLists.txt  los.1.in
oom/: AbstractMidiEditor.cpp  AbstractMidiEditor.h  CMakeLists.txt  TrackManager.cpp  TrackManager.h  app.cpp  app.h  audio.cpp  audio.h  audiotrack.cpp  conf.cpp  globaldefs.h  globals.h  importmidi.cpp  main.cpp  midi.cpp  midictrl.h  midimonitor.cpp  midiport.cpp  midiseq.cpp  node.cpp  osc.cpp  part.cpp  plugin.cpp  plugin.h  route.cpp  seqmsg.cpp  shortcuts.cpp  shortcuts.h  song.cpp  song.h  songfile.cpp  track.cpp  track.h  trackview.h  utils.cpp  wavetrack.cpp
oom/Composer/: CMakeLists.txt  Composer.cpp  ComposerCanvas.cpp  HeaderList.cpp
oom/ctrl/: ctrlcanvas.cpp
oom/driver/: CMakeLists.txt  jack.cpp  jackmidi.cpp
oom/instruments/: CMakeLists.txt  editinstrument.cpp  minstrument.h
oom/liste/: CMakeLists.txt  editevent.cpp
oom/master/: CMakeLists.txt
oom/midiedit/: CMakeLists.txt
oom/mixer/: AudioMixer.cpp  AudioMixer.h  astrip.cpp  astrip.h  meter.cpp  strip.cpp  strip.h
oom/widgets/: AutomationMenu.cpp  CMakeLists.txt  CreateTrackDialog.cpp  CreateTrackDialog.h  EffectRack.cpp  TrackInstrumentMenu.cpp  canvas.cpp  comment.cpp  comment.h  confmport.cpp  createtrackbase.ui  genset.cpp  instrumentdelegate.h  instrumenttree.cpp  menutitleitem.cpp  mixerdock.cpp  mixerdock.h  mixerview.cpp  plugindialog.cpp  plugindialog.h  plugingui.cpp  trackheader.cpp  trackheader.h  tviewdock.cpp
oom/widgets/ClipList/: AudioClipList.cpp
oom/widgets/conductor/: Conductor.cpp  Conductor.h  pctable.cpp
oom/widgets/toolbars/: feedbacktools.h
packaging/: CMakeLists.txt  los.desktop.in
patchcanvas/: CMakeLists.txt
share/: CMakeLists.txt
share/instruments/: CMakeLists.txt
share/locale/: CMakeLists.txt  oom_de.ts  oom_es.ts  oom_fr.ts  oom_pl.ts  oom_ru.ts  oom_sv_SE.ts
share/scripts/: CMakeLists.txt
share/templates/: CMakeLists.txt  default.los
utils/: CMakeLists.txt  los-find-unused-wavs
